--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
 <script src='https://adfinis.com/wp-content/themes/bb-theme/js/bootstrap-4.min.js?ver=1.7.11' id='bootstrap-4-js'
   defer></script>
 <script src="{{ '/assets/js/functions.js?v=' | append: site.github.build_revision | relative_url }}"></script>
-<script src="{{ '/assets/js/theme.min.js?v=' | append: site.github.build_revision | relative_url }}"></script>
+<!--<script src="{{ '/assets/js/theme.min.js?v=' | append: site.github.build_revision | relative_url }}"></script>-->
