--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,8 +305,8 @@ body {
     margin: 0;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Open Sans Light', sans-serif;
+h4 {
+  font-weight: bold;
 }
 
 nav.adfinis-nav-head {
