feat: add adjustable hero image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,8 @@
         <div class="col-md-12 col-lg-4 fl-page-header-logo-col">
           <div class="fl-page-header-logo" itemscope="itemscope" itemtype="https://schema.org/Organization">
             <a href="https://adfinis.com/" itemprop="url">
+              <img class="fl-logo-img" src="https://adfinis.com/wp-content/uploads/sites/9/2021/01/Adfinis_Quer_Black-1.png" width="3000" height="825">
+              <!--
               <picture class="fl-logo-img" loading="false" data-no-lazy="1" itemtype="https://schema.org/ImageObject"
                 data-retina="https://adfinis.com/wp-content/uploads/sites/9/2021/01/Adfinis_Quer_Black-1.png" title="">
                 <source type="image/webp"
@@ -17,6 +19,7 @@
                   width="3000" height="825" alt="Adfinis.com" />
               </picture>
               <meta itemprop="name" content="Adfinis.com" />
+              !-->
             </a>
           </div>
         </div>
