--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,11 +4,14 @@ layout: default
 
 <div class="fl-row fl-row-full-width fl-row-bg-parallax fl-node-6014333b38c9e fl-row-bg-overlay adng-hero"
   data-node="6014333b38c9e" data-parallax-speed="2"
+                            >
+  <!--
   data-parallax-image="https://adfinis.com/wp-content/uploads/sites/9/2021/05/PeopleatAdfinis_Smaller-1536x1024.jpeg"
   data-parallax-image-medium="https://adfinis.com/wp-content/uploads/sites/9/2021/01/PeopleatAdfinis-1536x1024.png"
   data-parallax-image-responsive="https://adfinis.com/wp-content/uploads/sites/9/2021/01/PeopleatAdfinis-1536x1024.png">
+  !-->
   <div class="fl-row-content-wrap"
-    style="background-position: center 56px; background-image: url(&quot;https://adfinis.com/wp-content/uploads/sites/9/2021/05/PeopleatAdfinis_Smaller-1536x1024.jpeg&quot;);">
+       style="background-position: center 56px; background-image: url(&quot;{{ site.hero.image_url }}&quot;);">
     <div class="fl-row-content fl-row-fixed-width fl-node-content">
 
       <div class="fl-col-group fl-node-6014333b38c93" data-node="6014333b38c93">
