--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,6 +439,6 @@ div.adfinis-nav-foot div.adfinis-nav-foot-pp {
     padding: 1em 1em 1em 1em;
 }
 
-a {
+h4 a {
     color: #2e4b98 !important;
 }
