fix(footer): Use correct variable names for links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,17 +53,17 @@
                       <div class="fl-module-content fl-node-content">
                         <div class="fl-icon-group">
                           <span class="fl-icon">
-                            <a href="{{ site.linkedin.href }}" target="_blank" rel="noopener">
+                            <a href="{{ site.footer.linkedin.href }}" target="_blank" rel="noopener">
                               <i class="fab fa-linkedin-in" aria-hidden="true"></i>
                             </a>
                           </span>
                           <span class="fl-icon">
-                            <a href="{{ site.github.href }}" target="_blank" rel="noopener">
+                            <a href="{{ site.footer.github.href }}" target="_blank" rel="noopener">
                               <i class="fab fa-github" aria-hidden="true"></i>
                             </a>
                           </span>
                           <span class="fl-icon">
-                            <a href="{{ site.twitter.href }}" target="_blank" rel="noopener">
+                            <a href="{{ site.footer.twitter.href }}" target="_blank" rel="noopener">
                               <i class="fab fa-twitter" aria-hidden="true"></i>
                             </a>
                           </span>
