--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
                         <div class="fl-photo fl-photo-align-left" itemscope itemtype="https://schema.org/ImageObject">
                           <div class="fl-photo-content fl-photo-img-png">
                               <img
-                                alt="Adfinis_White-e1607689403225" itemprop="image" height="1194" width="1384"
+                                aria-hidden="true" itemprop="image" height="1194" width="1384"
                                 src="https://adfinis.com/wp-content/uploads/sites/9/2020/05/Adfinis_White-e1607689403225.png" />
                           </div>
                         </div>
