fix: add base64 encoded image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                           <div class="fl-photo-content fl-photo-img-png">
                               <img
                                 aria-hidden="true" itemprop="image" height="1194" width="1384"
-                                src="https://adfinis.com/wp-content/uploads/sites/9/2020/05/Adfinis_White-e1607689403225.png" />
+                                src="data:image/png;base64, pictures/Adfinis_White_base64" />
                           </div>
                         </div>
                       </div>
