fix: replace path with URL

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                           <div class="fl-photo-content fl-photo-img-png">
                               <img
                                 aria-hidden="true" itemprop="image" height="1194" width="1384"
-                                src="data:image/png;base64, pictures/Adfinis_White_base64" />
+                                src="data:image/png;base64, https://raw.githubusercontent.com/Maryana-B/jekyll-theme-adfinis-ng/refs/heads/main/_includes/pictures/Adfinis_White_base64" />
                           </div>
                         </div>
                       </div>
